# BijoyBayanno

./: .editorconfig  .gitignore  .gitmodules  BUILD_REQUIREMENTS.md  BijoyBayanno.sln  CMakeLists.txt  CMakePresets.json  LICENSE  PROJECT_DEFAULTS.md  README.md
BijoyBayanno.exe/: BijoyBayanno.exe.csproj  NativeMethods.cs  README.md  Resources.resources  clsHandleInfo.cs  clsLayouts.cs  frmDictionary.Designer.cs  frmDictionary.cs  frmDlg.Designer.cs  frmDlg.cs  frmLayoutCreator.Designer.cs  frmLayoutCreator.cs  frmLayoutCreator.resources  frmMain.Designer.cs  frmMain.cs  frmMain.resources  frmOptions.Designer.cs  frmOptions.cs  frmOptions.resources  frmRegistration.Designer.cs  frmRegistration.cs  frmRegistration.resources  frmSplash.Designer.cs  frmSplash.cs  frmSplash.resources  mHandleInfo.cs  modFindLayouts.cs  modKeyboard.cs  modMouse.cs  myButton.cs  myFunctions.cs
BijoyBayanno.exe/My/: MyApplication.cs  MyComputer.cs  MyProject.cs  MySettings.Designer.cs  MySettings.settings  MySettingsProperty.cs
BijoyBayanno.exe/My/Resources/: Resources.cs
BijoyBayannoCpp/: CMakeLists.txt  MISSING_FUNCTIONALITY.md  README.md
BijoyBayannoCpp/LayoutEditor/: CMakeLists.txt
BijoyBayannoCpp/LayoutEditor/src/: LayoutEditor.cpp
BijoyBayannoCpp/include/core/: startup_options.h
BijoyBayannoCpp/include/platform/windows/: main_window.h  native_input.h  registration_dialog.h
BijoyBayannoCpp/src/: app.rc  app_state.cpp  app_state.h  dlg_main.cpp  dlg_main.h  dlg_registration.cpp  dlg_registration.h  find_layouts.cpp  find_layouts.h  handle_info.cpp  handle_info.h  keyboard_hook.cpp  keyboard_hook.h  layout.cpp  layout.h  main.cpp  my_functions.cpp  my_functions.h  native_api.cpp  native_api.h  resource.h
BijoyBayannoCpp/src/app/: main.cpp
BijoyBayannoCpp/src/core/: keyboard_hook_service.cpp  layout.cpp  layout_discovery.cpp  startup_options.cpp
BijoyBayannoCpp/src/platform/windows/: app.rc  main_window.cpp  native_input.cpp  registration_dialog.cpp  splash_screen.cpp
BijoyBayannoCpp/src/utils/: system_utils.cpp
